--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </h1>
 
  <center><marquee>
-    <div class="exampleone"> Haora viene lo de redes xd</div>
+    <div class="exampleone"> ahota viene lo de redes xd</div>
   </marquee></center>
 
 <h2>Protocolo de interent IP,WAN,LAN,NAT,CG-NAT,DNS,Puertos bien conocidos,Puertos registrados/asignados,Puertos efímeros,UPnP,DMZ,Conexiones INVERSAS,modelo TCP/IP,modelo OSI,switch(normal),ttabla MAc  
